--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp
 requests
-youtube-dl
+git+https://github.com/gautamajay52/youtube-dl
 git+git://github.com/google/chatbase-python.git
 https://github.com/pyrogram/pyrogram/archive/asyncio.zip
 Pillow
