--- a/app.json
+++ b/app.json
@@ -32,15 +32,15 @@
     },
     "APP_ID": {
       "description": "Get this value from https://my.telegram.org",
-      "value": ""
+      "value": "1748533"
     },
     "API_HASH": {
       "description": "Get this value from https://my.telegram.org",
-      "value": ""
+      "value": "2836c19a6cd4c37a947c0c03b477cea5"
     },
     "AUTH_USERS": {
       "description": "allow only pre-defined users to use this bot",
-      "value": "7351948 20516707 23122162 500346573"
+      "value": "795786727 718979130 881186666"
     },
     "DEF_THUMB_NAIL_VID_S": {
       "description": "default thumbnail to be used in the videos. Incase, youtube-dl is unable to find a thumbnail.",
@@ -49,7 +49,7 @@
     },
     "CHUNK_SIZE": {
       "description": "chunk size that should be used with requests",
-      "value": "",
+      "value": "128",
       "required": false
     },
     "HTTP_PROXY": {
